# ai_neural_network_runtime

./: .gitignore  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  neural-network-runtime-guidelines.md
example/deep_learning_framework/: CMakeLists.txt  README_zh.md
example/deep_learning_framework/cmake_build/: build_ohos_tflite.sh
example/deep_learning_framework/tflite/: CMakeLists.txt
example/deep_learning_framework/tflite/label_classify/: CMakeLists.txt  label_classify.cpp  label_classify.h
example/deep_learning_framework/tflite/nnrt/: CMakeLists.txt  nnrt_implementation.cpp  nnrt_implementation.h
example/deep_learning_framework/tflite/tools/: bitmap_helpers.cpp  bitmap_helpers.h  get_topn.h  log.h  utils.cpp  utils.h
example/drivers/nnrt/hdi_cpu_service/: BUILD.gn
frameworks/: BUILD.gn
frameworks/native/: backend_manager.cpp  backend_manager.h  backend_registrar.cpp  backend_registrar.h  compilation.cpp  compilation.h  compiler.h  cpp_type.h  device.h  device_discover.h  device_discover_v1_0.cpp  device_discover_v2_0.cpp  device_manager.cpp  device_manager.h  device_registrar.cpp  device_registrar.h  execution_plan.cpp  execution_plan.h  executor.cpp  executor.h  hdi_device.cpp  hdi_device.h  hdi_device_v1_0.cpp  hdi_device_v1_0.h  hdi_device_v2_0.cpp  hdi_device_v2_0.h  hdi_interfaces.h  hdi_prepared_model.cpp  hdi_prepared_model.h  hdi_prepared_model_v1_0.cpp  hdi_prepared_model_v1_0.h  hdi_prepared_model_v2_0.cpp  hdi_prepared_model_v2_0.h  hdi_returncode_transform.cpp  hdi_returncode_transform.h  hdi_returncode_utils.h  inner_model.cpp  inner_model.h  memory_manager.cpp  memory_manager.h  (+31 more)
frameworks/native/neural_network_core/: BUILD.gn  backend.h  backend_manager.cpp  backend_manager.h  backend_registrar.cpp  backend_registrar.h  compilation.h  compiler.h  cpp_type.h  executor.h  executor_config.h  libneural_network_core.versionscript  neural_network_core.cpp  nnrt_client.cpp  nnrt_client.h  tensor_desc.cpp  tensor_desc.h  utils.cpp  validation.cpp  validation.h
frameworks/native/neural_network_runtime/: BUILD.gn  device.h  hdi_device_v1_0.cpp  hdi_device_v1_0.h  hdi_device_v2_0.cpp  hdi_device_v2_0.h  hdi_device_v2_1.cpp  hdi_device_v2_1.h  hdi_prepared_model_v1_0.cpp  hdi_prepared_model_v1_0.h  hdi_prepared_model_v2_0.cpp  hdi_prepared_model_v2_0.h  hdi_prepared_model_v2_1.cpp  hdi_prepared_model_v2_1.h  hdi_returncode_utils.h  hdi_returncode_utils_v2_1.h  inner_model.cpp  inner_model.h  libneural_network_runtime.versionscript  lite_graph_to_hdi_model_v1_0.cpp  lite_graph_to_hdi_model_v1_0.h  lite_graph_to_hdi_model_v2_0.cpp  lite_graph_to_hdi_model_v2_0.h  lite_graph_to_hdi_model_v2_1.cpp  lite_graph_to_hdi_model_v2_1.h  memory_manager.cpp  memory_manager.h  neural_network_runtime.cpp  neural_network_runtime_compat.cpp  nn_tensor.cpp  nn_tensor.h  nnbackend.cpp  nnbackend.h  nncompiled_cache.cpp  nncompiled_cache.h  nncompiler.cpp  nncompiler.h  nnexecutor.cpp  nnexecutor.h  nntensor.cpp  (+12 more)
frameworks/native/neural_network_runtime/ops/: abs_builder.cpp  abs_builder.h  add_builder.cpp  add_builder.h  all_builder.cpp  all_builder.h  argmax_builder.cpp  argmax_builder.h  assert_builder.cpp  assert_builder.h  avgpool_builder.cpp  avgpool_builder.h  batch_to_space_nd_builder.cpp  batch_to_space_nd_builder.h  batchnorm_builder.cpp  batchnorm_builder.h  bias_add_builder.cpp  bias_add_builder.h  broadcast_to_builder.cpp  broadcast_to_builder.h  cast_builder.cpp  cast_builder.h  ceil_builder.cpp  ceil_builder.h  clip_builder.cpp  clip_builder.h  concat_builder.cpp  concat_builder.h  constant_of_shape_builder.cpp  constant_of_shape_builder.h  conv2d_builder.cpp  conv2d_builder.h  conv2d_transpose_builder.cpp  conv2d_transpose_builder.h  cos_builder.cpp  cos_builder.h  crop_builder.cpp  crop_builder.h  depth_to_space_builder.h  (+184 more)
frameworks/native/ops/: add_builder.cpp  add_builder.h  argmax_builder.cpp  argmax_builder.h  avgpool_builder.h  batch_to_space_nd_builder.cpp  batch_to_space_nd_builder.h  batchnorm_builder.cpp  batchnorm_builder.h  bias_add_builder.h  cast_builder.cpp  cast_builder.h  concat_builder.h  conv2d_builder.cpp  conv2d_builder.h  conv2d_transpose_builder.cpp  conv2d_transpose_builder.h  depthwise_conv2d_native_builder.cpp  depthwise_conv2d_native_builder.h  div_builder.cpp  div_builder.h  eltwise_builder.h  expandims_builder.cpp  expandims_builder.h  fill_builder.cpp  fill_builder.h  fullconnection_builder.cpp  fullconnection_builder.h  gather_builder.cpp  gather_builder.h  gelu_builder.cpp  gelu_builder.h  hswish_builder.cpp  hswish_builder.h  layernorm_builder.cpp  layernorm_builder.h  lessequal_builder.cpp  lessequal_builder.h  matmul_builder.cpp  matmul_builder.h  (+64 more)
test/fuzztest/hdinnrtops_fuzzer/: BUILD.gn  hdinnrtops_fuzzer.cpp  hdinnrtops_fuzzer.h
test/fuzztest/nncore_fuzzer/: BUILD.gn  nncore_fuzzer.cpp  nncore_fuzzer.h
test/system_test/: BUILD.gn  device_test.cpp  end_to_end_test.cpp  end_to_end_test.h  stress_test.cpp
test/system_test/common/: nnrt_test.cpp  nnrt_test.h
test/unittest/components/: BUILD.gn
test/unittest/inner_kits/: BUILD.gn  neural_network_runtime_inner_test.cpp  neural_network_runtime_inner_test.h
test/unittest/ops/: BUILD.gn  abs_test.cpp  add_test.cpp  all_test.cpp  argmax_test.cpp  assert_test.cpp  avgpool_pad_test.cpp  avgpool_padmod_test.cpp  batch_to_space_nd_test.cpp  batchnorm_builder_test.cpp  biasadd_test.cpp  broadcast_to_test.cpp  cast_test.cpp  ceil_test.cpp  clip_test.cpp  concat_three_inputs_test.cpp  concat_two_inputs_test.cpp  constant_of_shape_test.cpp  conv2d_pad_test.cpp  conv2d_padmode_test.cpp  conv2d_tranpose_padmode_test.cpp  conv2d_transpose_pad_test.cpp  cos_test.cpp  crop_test.cpp  depth_to_space_test.cpp  depthwise_conv2d_native_pad_test.cpp  depthwise_conv2d_native_padmode_test.cpp  detection_post_process_test.cpp  div_test.cpp  eltwise_test.cpp  equal_builder_test.cpp  erf_test.cpp  exp_test.cpp  expandims_test.cpp  fill_builder_test.cpp  flatten_test.cpp  floor_test.cpp  fullconnection_test.cpp  fullconnection_with_axis_test.cpp  gather_builder_test.cpp  (+80 more)
(+257 files in other folders)
