# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

declare_args() {
  neural_network_runtime_coverage = false
}

config("coverage_flags") {
  if (neural_network_runtime_coverage) {
    cflags = [ "--coverage" ]
    cflags_cc = [ "--coverage" ]
    ldflags = [ "--coverage" ]
  }
}

group("nnrt_target") {
  deps = [
    "frameworks/native/neural_network_core:libneural_network_core",
    "frameworks/native/neural_network_runtime:libneural_network_runtime",
  ]
}

group("nncore_target") {
  deps = [ "frameworks/native/neural_network_core:libneural_network_core" ]
}

group("nnrt_test_target") {
  testonly = true
  deps = [ "test/unittest:unittest" ]
}
group("nnrt_fuzztest") {
  testonly = true
  deps = [ "test/fuzztest:fuzztest" ]
}
