# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "neural_network_runtime/"

config("system_test_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../..",
    "../../frameworks/native/neural_network_runtime",
    "../../frameworks/native/neural_network_core",
    "//third_party/mindspore/mindspore-src/source/mindspore/lite/mindir/include",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
  ]
}

ohos_systemtest("DeviceTest") {
  module_out_path = module_output_path
  sources = [ "./device_test.cpp" ]

  configs = [ ":system_test_config" ]

  deps = [
    "//foundation/ai/neural_network_runtime/frameworks:libneural_network_runtime",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_nnrt:libnnrt_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
  ]
}

ohos_systemtest("End2EndTest") {
  module_out_path = module_output_path
  sources = [
    "./common/nnrt_test.cpp",
    "./end_to_end_test.cpp",
  ]

  configs = [ ":system_test_config" ]

  deps = [
    "../../frameworks/native/neural_network_core:libneural_network_core",
    "../../frameworks/native/neural_network_runtime:libneural_network_runtime",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_nnrt:libnnrt_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "mindspore:mindir",
  ]
}

group("system_test") {
  testonly = true
  deps = [
    ":DeviceTest",
    ":End2EndTest",
  ]
}
