# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("nnrt_config") {
  cflags = [ "-fstack-protector-all" ]
  cflags_cc = [ "-fexceptions" ]
  include_dirs = [
    "./",
    "../neural_network_runtime",
    "../../../interfaces/innerkits/c",
    "../../../interfaces/kits/c",
  ]
}

nnrt_core_sources = [
  "backend_manager.cpp",
  "backend_registrar.cpp",
  "neural_network_core.cpp",
  "tensor_desc.cpp",
  "utils.cpp",
  "validation.cpp",
]

ohos_shared_library("libneural_network_core") {
  sources = nnrt_core_sources
  output_extension = "so"

  install_images = [
    "system",
    "updater",
  ]

  include_dirs = [ "../../.." ]

  public_configs = [
    "../../..:coverage_flags",
    ":nnrt_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "ai"
  innerapi_tags = [ "ndk" ]
  part_name = "neural_network_runtime"
}
