# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "neural_network_runtime/"

##############################fuzztest##########################################
ohos_fuzztest("NNCoreFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../nncore_fuzzer"

  include_dirs = [
    "../../..",
    "../../../frameworks/native",
    "../../../frameworks/native/neural_network_core",
    "../../../frameworks/native/neural_network_runtime",
    "../../../interfaces/kits/c/neural_network_runtime",
    "//third_party/mindspore/mindspore-src/source/mindspore/lite/mindir/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "nncore_fuzzer.cpp" ]

  deps = [
    "../../../frameworks/native/neural_network_core:libneural_network_core",
    "../../../frameworks/native/neural_network_runtime:libneural_network_runtime",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}
